Add combo and cleanup

--- a/src/components/D3RadarChart.css
+++ b/src/components/D3RadarChart.css
@@ -22,10 +22,13 @@ body {
 	Larry just playing with fonts.
 */
 
+
+/* 
 .raleway {
     font-family: "Raleway";
 }
 
 .pacifico {
     font-family: "Pacifico";
-}
+} 
+*/
