--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,18 @@
     color: #61dafb;
 }
 
+.raleway {
+    font-family: "Raleway";
+    font-size: 14px;
+    /* font-weight: 90; */
+}
+
+.pacifico {
+    font-family: "Pacifico";
+    font-size: 14px;
+    /* font-weight: 90; */
+}
+
 @keyframes App-logo-spin {
     from {
         transform: rotate(0deg);
